--- a/src/views/portal.ejs
+++ b/src/views/portal.ejs
@@ -1,17 +1,17 @@
 <%- include('layout.ejs'); %>
-<div class="container-fluid">
+<div class="py-10 px-12">
     <form action="/portal/invoice"  method="post">
-        <div class="mb-3">
-            <label for="reference" class="form-label">Invoice Reference:</label>
-            <input type="text" class="form-control w-25" id="reference" name="reference" aria-describedby="referenceHelp"
+        <div class="">
+            <label for="reference" class="text-2xl font-bold">INVOICE REFERENCE:</label>
+            <input type="text" class="rounded border py-2 px-3" id="reference" name="reference" placeholder="Enter Invoice reference" aria-describedby="referenceHelp"
             >
-            <div id="referenceHelp" class="form-text">Enter your unique invoice reference number.</div>
-           <% if(error) {%> 
-            <div id="alert" class="alert alert-warning w-25" role="alert"><%= error %>
+            <div id="referenceHelp" class="text-base my-2">Enter your unique invoice reference number.</div>
+           <% if(error) {%>
+            <div id="alert" class="text-red-500 font-medium text-base" role="alert"><%= error %>
        </div>
         <% } %>
         </div>
-        <button type="submit" class="btn btn-primary">Find Invoice</button>
+        <button type="submit" class="bg-blue-500 p-2 my-4 rounded text-white">Find Invoice</button>
     </form>
 </div>
 </body>
