--- a/src/views/invoice.ejs
+++ b/src/views/invoice.ejs
@@ -46,5 +46,8 @@
            <% } %>
       </div>
 </div>
+ <footer class="flex flex-col items-center justify-center  leading-loose text-white bg-gray-700  pb-4">
+      <span class="mt-4 text-base print:text-xs">&copy; 2022 Olohimai Akalumhe. All Rights Reserved.</span>
+  </footer>
 </body>
 </html>
