--- a/src/views/portal.ejs
+++ b/src/views/portal.ejs
@@ -14,5 +14,8 @@
         <button type="submit" class="bg-blue-500 p-2 my-4 rounded text-white">Find Invoice</button>
     </form>
 </div>
+ <footer class="flex flex-col items-center justify-center  leading-loose text-white bg-gray-700  pb-4">
+      <span class="mt-4 text-base print:text-xs">&copy; 2022 Olohimai Akalumhe. All Rights Reserved.</span>
+  </footer>
 </body>
 </html>
