--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -10,6 +10,6 @@
 </head>
 <body><!-- Just an image -->
   <nav class="px-10 py-8">
-    <a class="text-4xl font-bold py-3 px-2 bg-gradient-to-r from-cyan-500 to-blue-500" href="/">Payment Portal</a>
+    <a class="text-4xl font-bold py-3 px-2 bg-gradient-to-r from-cyan-500 to-blue-500" href="/"> Finance Portal</a>
     <div class="" id="navbarSupportedContent"></div>
 </nav>
